<resources>
    <string name="app_name">Lego App</string>
    <string name="btn_search">Search</string>
    <string name="btn_register">Register</string>
    <string name="btn_setup">Options &amp; Setup</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_search">Search</string>
    <string name="chk_filter_by_year">Filter by year</string>
    <string name="lbl_from_year">From year</string>
    <string name="lbl_to_year">To year</string>
    <string name="chk_filter_by_parts">Filter by parts</string>
    <string name="lbl_minimum_parts">Minimum parts</string>
    <string name="lbl_maximum_parts">Maximum parts</string>
    <string name="lbl_enter_api_key_explanation">Please enter your API key here. This API key can be obtained by registering at rebrickable.com and accessing the Account > Settings > API and executing Generate new API key if you don\'t have any already. Then copy and paste that key in the box below and check it against the server.</string>
    <string name="hint_enter_api_key">Enter your API key</string>
    <string name="btn_check_api_key">Check API key</string>
    <string name="hint_cannot_be_empty">The API key cannot be an empty string</string>
    <string name="hint_bad_format">The API key has to be a string of 32 characters (0-9 and a-f)</string>
    <string name="btn_change_api_key">Change</string>
    <string name="btn_remove_api_key">Remove</string>
    <string name="lbl_your_api_key">Your API key</string>
    <string name="lbl_no_api_key">No API key</string>
    <string name="lbl_remove_api_key_alert_message">You are about to remove the API key you entered. The application will restart completely and purge all your settings. Then you will have to enter again an API key to use the app.</string>
    <string name="lbl_remove_api_key_alert_title">Removing the API key</string>
    <string name="lbl_step_initializing">Initializing</string>
    <string name="lbl_step_checking_api_key">Checking the API key</string>
    <string name="lbl_enter_api_key_title">Setting the API key</string>
</resources>