<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterApiKeyActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_enter_api_key_explanation"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edApiKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:digits="0123456789abcdef"
            android:ems="10"
            android:hint="@string/hint_enter_api_key"
            android:inputType="text"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnCheckApiKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_check_api_key" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>